welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:8: error: ')' expected but '.' found.
		for(j<-0 nums.length)
                             ^indexOfValue:10: error: illegal start of simple expression
	}else{
        ^